name:                react-flux-servant
version:             0.2.0
synopsis:            Allow react-flux stores to send requests to a servant server
category:            Web
homepage:            https://bitbucket.org/wuzzeb/react-flux-servant
license:             BSD3
license-file:        LICENSE
author:              John Lenz <wuzzeb@gmail.com>
maintainer:          John Lenz <wuzzeb@gmail.com>
build-type:          Simple
description:         See the README below.
cabal-version:       >=1.10

extra-source-files:
    ChangeLog.md,
    README.md

source-repository head
    type: mercurial
    location: https://bitbucket.org/wuzzeb/react-flux-servant

library
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-redundant-constraints
  default-language: Haskell2010
  exposed-modules: React.Flux.Addons.Servant

  default-extensions: TypeOperators
                      DataKinds
                      PolyKinds
                      TypeFamilies
                      FlexibleInstances
                      FlexibleContexts
                      OverloadedStrings
                      ScopedTypeVariables

  build-depends: base >= 4.8 && < 5
               , ghcjs-base
               , react-flux >= 1.2 && < 1.4
               , servant >= 0.7
               , aeson >= 0.8
               , text >= 1.2
               , string-conversions >= 0.4 && < 0.5
